--- a/source/Schlusswort.adoc
+++ b/source/Schlusswort.adoc
@@ -4,7 +4,7 @@ Uns ist klar, dass man mit einer kleinen Umfrage nicht alle Aspekte abdecken kan
 Trotzdem decken wir mit dieser Arbeit einen Teil der Stimmen der Gaming-Community.
 Die Ergebnisse, die uns die Befragten Lieferten, bestätigten unsere These nicht.
 Die Leute wollen noch immer vertiefte Handlung und nicht nur einen oberflächlichen Onlinemodus.
-Unser Fazit lautet also, dass die Relevanz der Story in Videospielen in den letzten Jahren nicht abgenommen hat.
+Unser Fazit lautet also, dass die Relevanz der Story in Video&#173;spielen in den letzten Jahren nicht abgenommen hat.
 Wir denken, dass auch in Zukunft die Industrie sich an Stories halten wird, zumindest wenn die Spieler weiterhin diese Einstellung behalten.
 In ein paar Jahren wird es auch mehr technische Mittel geben, die neue Features ermöglichen und so diesen Lauf beeinflussen könnten.
 So oder so sind wir uns einer guten Gaming-Zukunft sicher und haben Vertrauen in die Spielemacher.
