--- a/source/einleitung.adoc
+++ b/source/einleitung.adoc
@@ -1,19 +1,19 @@
 = Einleitung
 
 Das Oberthema der Berufsmaturitätsarbeiten unserer Klasse lautet "Wandel".
-In dieser Arbeit untersuchen wir die Relevanz von Geschichten in Videospielen und ob sich diese in den letzten Jahren verändert hat.
-Um den Kontext für diese Fragestellung herzustellen, betrachten wir, wie Geschichten in Videospielen eingesetzt werden.
-Wir vergleichen es mit anderen Kustformen und geben zuätzlich einen kurzen Überblick über die Entwicklung der Videospiele.
+In dieser Arbeit untersuchen wir die Relevanz von Ge&#173;schich&#173;ten in Video&#173;spielen und ob sich diese in den letzten Jahren verändert hat.
+Um den Kontext für diese Fragestellung herzustellen, betrachten wir, wie Ge&#173;schich&#173;ten in Video&#173;spielen eingesetzt werden.
+Wir vergleichen es mit anderen Kustformen und geben zuätzlich einen kurzen Überblick über die Entwicklung der Video&#173;spiele.
 
 
 == Motivation
 
-Da wir beide leidenschaftliche Gamer sind, haben wir uns entschlossen das Thema "Wandel" im Kontext von "Videospielen" zu untersuchen.
+Da wir beide leidenschaftliche Gamer sind, haben wir uns entschlossen das Thema "Wandel" im Kontext von "Video&#173;spielen" zu untersuchen.
 Wir beide lieben so genannte Role-playing Games (RPG) und versuchten deshalb, diese in unser Thema einzubauen.
 RPG's sind in den 80er und 90er Jahren gross geworden und prägten damals die Gaming Industrie.
 Wir sind beide Ende der 90er Jahre geboren und haben uns erst in unserer frühen Jugend mit Games befasst.
-Da wir deshalb viel Gaming Geschichte verpasst haben, betrachten wir in einem ersten Teil die Entwicklung der Videospiele, die Geschichten erzählen, von den Anfängen bis Heute.
-Dazu versuchen wir mit einer Umfrage bei Spielern zu erfahren, wie diese zur Entwicklung der Story von Videospielen stehen.
+Da wir deshalb viel Gaming Ge&#173;schich&#173;te verpasst haben, betrachten wir in einem ersten Teil die Entwicklung der Video&#173;spiele, die Ge&#173;schich&#173;ten erzählen, von den Anfängen bis Heute.
+Dazu versuchen wir mit einer Umfrage bei Spielern zu erfahren, wie diese zur Entwicklung der Story von Video&#173;spielen stehen.
 
 
 == Fragestellung & Hypothese
@@ -32,13 +32,13 @@ Wir haben versucht, all diese Fragen in einer Frage zu subsumieren.
 Hat sich die Relevanz der Story-Line der Games in den letzten 20 Jahren verändert?
 --
 
-Unsere Hypothese ist, dass die Storyline in Videospielen in den letzten 20 Jahren für die Konsumenten/Spieler weniger wichtig geworden ist.
+Unsere Hypothese ist, dass die Storyline in Video&#173;spielen in den letzten 20 Jahren für die Konsumenten/Spieler weniger wichtig geworden ist.
 Viele der heutigen Spiele verfügen über zwei unabhängige Modi.
-Im Singleplayer liegt der Fokus voll und ganz auf der Geschichte, die der Spieler erlebt.
+Im Singleplayer liegt der Fokus voll und ganz auf der Ge&#173;schich&#173;te, die der Spieler erlebt.
 Im Online-Modus wird die Spielwelt genommen und als Spieler bewegt man sich mit Mitspielern und gegnerischen Spielern in dieser Welt und versucht ein Ziel zu erreichen und (als Gruppe) zu gewinnen.
-Die Geschichte tritt dabei meist komplett in den Hintergrund.
+Die Ge&#173;schich&#173;te tritt dabei meist komplett in den Hintergrund.
 
-Viele Spiele, die Online gespielt werden, haben ein finanzielles Modell, bei dem der Spieler entweder monatliche Gebühren oder Micro-Trasaktionen tätigt.
+Viele Spiele, die Online gespielt werden, haben ein finanzielles Modell, bei dem der Spieler entweder monatliche Gebühren oder Micro-Transaktionen tätigt.
 Es ist vermutlich das Ziel der Hersteller, die Spieler möglichst lange an ihr Spiel zu binden um ihre Einnahmen zu maximieren.
 Das Ziel dieser Umfrage war es, mindestens 50 Gamer aus verschiedenen Altersgruppen zu fragen, was sie von unserer These halten und was ihrer Meinung nach wichtiger ist.
 
@@ -48,8 +48,8 @@ Als Techniken haben wir für diese Arbeit Literaturrecherche und eine Umfrage ge
 
 == Überblick über die Arbeit
 
-Im Kapitel "Geschichte von Videospielen" geben wir einen kurzen Überblick über das Thema Geschichte und wie diese in Videospiele umgesetzt werden.
-Zudem untersuchen wir im Kapitel "Die Entstehung von Geschichten in Videospielen" die Entwicklung von den 1970er Jahren bis zur heutigen Zeit.
+Im Kapitel "Ge&#173;schich&#173;te von Video&#173;spielen" geben wir einen kurzen Überblick über das Thema Ge&#173;schich&#173;te und wie diese in Video&#173;spiele umgesetzt werden.
+Zudem untersuchen wir im Kapitel "Die Entstehung von Ge&#173;schich&#173;ten in Video&#173;spielen" die Entwicklung von den 1970er Jahren bis zur heutigen Zeit.
 Dann folgt "Die Auswertung der Umfrage" in dem wir unsere Umfrage kritisch betrachten und daraus Schlüsse ziehen.
 Im Schlusswort ziehen wir ein Fazit.
-Im Anhang befindet sich Literaturverzeichnis, Danksagung und die Umfrage sowie ein Glossar in dem die englischen Begriffe erklärt werden.
+Im Anhang befindet sich Literaturverzeichnis, die Danksagung, die Umfrage und deren Resultate sowie ein Glossar in dem die englischen Begriffe erklärt werden.
