--- a/source/Schlusswort.adoc
+++ b/source/Schlusswort.adoc
@@ -1,6 +1,6 @@
 = Schlusswort
 
-Uns ist klar, dass man mit einer kleinen Umfrage nicht alle Aspekte abdecken kann um diese Arbeit zu fundieren.
+Uns ist klar, dass man mit einer kleinen Umfrage nicht alle Aspekte abdecken kann um unsere These fundiert zu beantworten.
 Trotzdem decken wir mit dieser Arbeit einen Teil der Stimmen der Gaming-Community.
 Die Ergebnisse, die uns die Befragten Lieferten, bestätigten unsere These nicht.
 Die Leute wollen noch immer vertiefte Handlung und nicht nur einen oberflächlichen Onlinemodus.
