--- a/source/Story in Videospielen.adoc
+++ b/source/Story in Videospielen.adoc
@@ -111,7 +111,7 @@ In _World of Warcraft_ ist die Art wie die Ge&#173;schich&#173;te erzählt wird 
 Der Spie&#173;ler ist ein Teil der Spielwelt und hat auch Einfluss auf diese.
 Im Jahr 2017 ist das neue Erweiterungs-Paket für _World of Warcraft_ erschienen.
 Die Spie&#173;ler machten sich auf den Weg neue Ort zu entdecken, stärker zu werden und neue Verbündete zu gewinnen.
-Die Ge&#173;schich&#173;te von _World of Warcraft_ ist eine Klassische "Monster überwinden"-Story, jedoch gibt es nicht nur einen Protagonisten sondern die Spie&#173;ler müssen zusammen gegen die Monster kämpfen.
+Die Ge&#173;schich&#173;te von _World of Warcraft_ ist eine Klassische "Monster überwinden"-Story, jedoch gibt es nicht nur einen Pro&#173;ta&#173;gonisten sondern die Spie&#173;ler müssen zusammen gegen die Monster kämpfen.
 Wir sehen das so, dass dies auch eine Ge&#173;schich&#173;te ist und nicht nur ein Spiel, auch wenn jeder das machen kann was er will.
 
 
