--- a/source/Danksagung.adoc
+++ b/source/Danksagung.adoc
@@ -3,10 +3,8 @@
 
 An dieser Stelle möchten wir uns ganz herzlich bei unserer Betreuerin, Patrizia Luperti, für ihren Einsatz und ihre Unterstützung bedanken.
 
-Unsere Lehrperson Micha Ruflin für seine Konstruktive Kritik, die er uns in seinem Untericht gab.
+Unserer Lehrperson Micha Ruflin für seine Konstruktive Kritik, die er uns in seinem Untericht gab, möchten wir auch danken.
 
 Wir bedanken uns auch bei allen Personen die an unsere Umfrage Teilgenommen haben.
 
 Tobias bedankt sich ganz besonders bei seinen Eltern, Daniela Vogt und Jens-Christian Fischer die ihn unterstüzt haben und immer für Fragen offen waren.
-
-Tenzin bedankt sich............
