--- a/source/Die Entstehung von Story in Videogames.adoc
+++ b/source/Die Entstehung von Story in Videogames.adoc
@@ -4,12 +4,12 @@
 == Dungeons and Dragons
 
 Ich denke fast jeder hat schonmal von 'Dungeons and Dragons' gehört.
-Man verbinden es oft mit jungen Nerds, die im Keller eingeschlossen mit ihren Freunden 'Dungeons und Dragons' spielen.
+Man verbindet es oft mit jungen Nerds, die im Keller eingeschlossen mit ihren Freunden 'Dungeons und Dragons' spielen.
 Nun was ist den dieses 'Dungeons and Dragons'?
-Es ist ein sogenanntes Pen and Paper Rollenspiel und wie der Name schon verrät, spielt man es mit Papier und Stift.
+Es ist ein sogenanntes "Pen and Paper" Rollenspiel und wie der Name schon verrät, spielt man es mit Papier und Stift.
 Der Spie&#173;ler schlüpft in eine fiktive Rolle und erlebt mit seinen Mitspie&#173;lern verschiedenen Abenteuer.
 Der Spielleiter ist wie der Erzähler in einem Buch oder Film und die Spie&#173;ler verkörpern die Charaktere.
-Anstatt das vorgegeben ist, wie sich die Charaktere verhalten und was sie als nächstes tun, entscheiden die Spie&#173;ler selber, was sie als nächstes machen.
+Anstatt, dass es vorgegeben ist, wie sich die Charaktere verhalten und was sie als nächstes tun, entscheiden die Spie&#173;ler selber, was sie als nächstes machen.
 Man sieht klare Zusammenhänge zu heutigen Role-playing Games.
 Wie wir bereits erklärten wird der Spie&#173;ler zum Gestalter der Ge&#173;schich&#173;te und erlebt die Ge&#173;schich&#173;te gleichzeitig mit.
 
@@ -24,9 +24,9 @@ Speicherplatz war zu dieser Zeit sehr wertvoll, deshalb hatten Universitäten ei
 Das heisst, dass fast alle zu dieser Zeit entwickelten Rollenspiele gelöscht wurden.
 Das älteste noch erhaltene Rollenspiel heisst 'dnd' und wurde 1974 an der Universität Illinois entwickelt.
 Heute gibt es diese Rollenspiele immer noch, auch wenn das Genre nicht mehr so gross ist wie vor ein paar Jahren.
-Ein gutes Beispiel für ein Video&#173;spiel welches noch sehr klare Änlichkeiten mit 'Dungeons and Dragons' hat ist 'Divinity: Original Sin 2', welches im Herbst 2017 erschienen ist.
-Im Spiel gibt es sogar eine Funktion, ein Pen and Paper Spiel mit seinen Freunden zu spielen.
-Der Stift und das Papier ist zwar nicht vorhanden aber dennoch ist es fast identisch zu dem Orginal.
+Ein gutes Beispiel für ein Video&#173;spiel welches noch sehr klare Ähnlichkeiten mit 'Dungeons and Dragons' hat ist 'Divinity: Original Sin 2', welches im Herbst 2017 erschienen ist.
+Im Spiel gibt es sogar eine Funktion, mit welcher man mit seinen Freunden ein "pen and paper" Spiel spielen kann.
+Der Stift und das Papier sind zwar nicht vorhanden, dennoch ist es fast identisch zu dem Orginal.
 Man muss sich die Abenteuer nicht vorstellen, sondern man erlebt sie am Bildschirm mit.
 Ob das gut oder schlecht ist, kann jeder für sich selber entscheiden.
 
@@ -36,17 +36,17 @@ Adventures oder auch Abenteuerspiele sind Games, denen eine Story zu Grunde lieg
 Oft ist es verbunden mit Erkundung und Rätseln.
 In gewissen Elementen kommt es dem RPG Genre sehr nahe.
 Anders als in den Textadventures steht hier das Erzählen durch Grafik und Sound im Vordergrund.
-Am Anfang war das noch schwarze Flächen mit ein paar Strichen.
-Heute hingegen kann man mit Grafik alleine sehr viel er&#173;zähl&#173;en und es sieht auch sehr schön aus.
+Am Anfang waren das noch schwarze Flächen mit ein paar Strichen.
+Heute hingegen kann man mit der Grafik alleine sehr viel er&#173;zähl&#173;en und es sieht auch sehr realistisch aus.
 
 .Mystery House (1980)
 image::images/Mysteryhouse.png[Mysterhouse, pdfwidth=50%,align=center]
 
 In den 90er Jahren starb das Adventure Genre fast aus, weil durch technischen Fortschritt neue Genres ans Tageslicht kamen.
-Ego-Shooter wie _Quake_ und _Doom_ regierten den Markt.
+Ego-Shooter (Ein Videospiel in welchem man aus der "Ich-Perspektive" spielt und mit Waffen gegner erledigt) wie _Quake_ und _Doom_ regierten den Markt.
 Im neuen Jahrtausend aber kamen die Adventures zurück auf die Bühne und feiern bis heute grosse Erfolge.
 Nicht nur das, ge&#173;wis&#173;se gelten sogar als Kultklassiker.
-So auch 'The Walking Dead' von Telltale Games, dies  ist ein episodisches Spiel, welches eine packende und Herz zer&#173;reissende Ge&#173;schich&#173;te erzählt.
+So auch 'The Walking Dead' von Telltale Games, dies  ist ein episodisches Spiel, welches eine packende und herzzer&#173;reissende Ge&#173;schich&#173;te erzählt.
 Der Spie&#173;ler wird gezwungen schwere Ent&#173;scheid&#173;ungen zu treffen, die Charaktere das Leben kosten könnten.
 
 == Interactive Fiction
@@ -57,5 +57,5 @@ Es gibt einen jährlichen Wettbewerb in dem gute Textadventures mit aussergewöh
 Bekannte Bei&#173;spiele dafür sind zum Beispiel, das 1988 erschienene Spiel namens _Corruption_, in welchem man als Insider einen Kriminalfall lösen musste.
 Ein weiteres Bei&#173;spiel wäre _Galatea_.
 In diesem Spiel muss man an einer Stelle mit der Statue einer Göttin sprechen und Infos aus ihr rausholen.
-Die Schwier&#173;ig&#173;keit dabei war, dafür zu sorgen, dass sie nicht gelangweilt wurde.
-Denn wäre dies der Fall, hätte sie nicht weiter mit einem geredet.
+Die Schwier&#173;ig&#173;keit dabei ist, dafür zu sorgen, dass sie nicht gelangweilt wird.
+Denn ist dies der Fall, hatt sie nicht weiter mit einem geredet.
