--- a/source/einleitung.adoc
+++ b/source/einleitung.adoc
@@ -13,7 +13,7 @@ Wir beide lieben so genannte Role-playing Games (RPG) und versuchten deshalb, di
 RPG's sind in den 80er und 90er Jahren gross geworden und prägten damals die Gaming Industrie.
 Wir sind beide Ende der 90er Jahre geboren und haben uns erst in unserer frühen Jugend mit Games befasst.
 Da wir deshalb viel Gaming Ge&#173;schich&#173;te verpasst haben, be&#173;tracht&#173;en wir in einem ersten Teil die Entwicklung der Video&#173;spiele, die Ge&#173;schich&#173;ten er&#173;zähl&#173;en, von den Anfängen bis Heute.
-Dazu versuchen wir mit einer Umfrage bei Spie&#173;lern zu erfahren, wie diese zur Entwicklung der Story von Video&#173;spielen stehen.
+Dazu versuchen wir mit einer Umfrage bei Spie&#173;lern zu erfahren, wie diese zur Entwicklung der Geschichten von Video&#173;spielen stehen.
 
 
 == Fragestellung & Hypothese
@@ -50,6 +50,6 @@ Als Techniken haben wir für diese Arbeit Literaturrecherche und eine Umfrage ge
 
 Im Kapitel "Ge&#173;schich&#173;te von Video&#173;spielen" geben wir einen kurzen Überblick über das Thema Ge&#173;schich&#173;te und wie diese in Video&#173;spiele umgesetzt werden.
 Zudem untersuchen wir im Kapitel "Die Entstehung von Ge&#173;schich&#173;ten in Video&#173;spielen" die Entwicklung von den 1970er Jahren bis zur heutigen Zeit.
-Dann folgt "Die Auswertung der Umfrage" in dem wir unsere Umfrage kritisch be&#173;tracht&#173;en und daraus Schlüsse ziehen.
+Dann folgt "Die Auswertung der Umfrage", in welchem wir unsere Umfrage kritisch be&#173;tracht&#173;en und daraus Schlüsse ziehen.
 Im Schlusswort ziehen wir ein Fazit.
-Im Anhang befindet sich Literaturverzeichnis, die Danksagung, die Umfrage und deren Resultate sowie ein Glossar in dem die englischen Begriffe erklärt werden.
+Im Anhang befindet sich das Literaturverzeichnis, die Danksagung, die Umfrage und deren Resultate sowie ein Glossar, in dem die englischen Begriffe erklärt werden.
